--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
     </div>
 
    </div>
-   <script src="../JavaScript Crash Course/Index.js"></script>
+   <script src="Index.js"></script>
 </body>
 </html>
